--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,12 +77,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
     <ImageButton
         android:id="@+id/playBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:layout_marginTop="1dp"
         android:background="@drawable/play_icon"
         app:layout_constraintStart_toStartOf="@+id/pauseBtn"
@@ -94,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="271dp"
         android:maxHeight="4dp"
-        android:progress="50"
+        android:progress="0"
         android:progressDrawable="@drawable/green_scrubber_control"
         android:thumb="@drawable/seek_bar_slider"
         app:layout_constraintBottom_toBottomOf="parent"
